--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -67,7 +67,7 @@ $^2$Петрозаводский Государственный Универси
 
 Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяженная речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
 
-Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливает сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и т.п.) и, на наш взгляд, является предтечей искусственного интеллекта.
+Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и т.п.) и, на наш взгляд, является предтечей искусственного интеллекта.
 
 Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
 
@@ -132,7 +132,7 @@ $p(F_1, F_2, \ldots , F_nS) = p(S)\Pi^n_{i=1}p(F_i \vee S)$
 
 \begin{table}[H]
 \centering
-\caption{Число употреблений слова \textit{line} (столбец \textit{count}) для шести наиболее часто встречаемых значений (значения из тезауруса WordNet, столбец \textit{sense}) по данным корпусов \textit{ACL/DCI Wall Street Journal и American Printing House for the Blind}}
+\caption{Число употреблений слова \textit{line} (столбец \textit{count}) для шести наиболее часто встречаемых значений (значения из те\-за\-уру\-са WordNet, столбец \textit{sense}) по данным корпусов \textit{ACL/DCI Wall Street Journal и American Printing House for the Blind}}
 \begin{tabular}{|c|c|}
 \hline
 sense & count\\
@@ -185,9 +185,9 @@ total & 2368\\
 
 \parindent=0,5cm
 
-Использование нейронных сетей (NN)  для WSD было предложено в 80-е гг. в работах \cite{COTTRELL 1983,WALTZ 1985}. В типичной NN на вход   подается   слово, значение которого требуется установить, т.е. целевое (\textit{target}) слово, а также --- контекст (фраза) его содержащий. Узлы выхода соответствуют различным значениям слова. В процессе обучения, когда значение тренировочного целевого слова известен, веса связующих узлы соединений (связей), настраиваются таким образом, чтобы по окончании обучения выходной узел, соответствующий истинному значению целевого слова, имел наибольшую активность. Веса соединений могут быть  положительными или отрицательными, и настраиваются посредством рекуррентных алгоритмов (алгоритм обратного распространения ошибки,  рекуррентный метод наименьших квадратов и т.д.). Сеть может содержать скрытые (hidden) слои, состоящие из узлов, соединенных как прямыми, так и обратными связями. Для представления входной информации обычно используется одна из двух схем:  распределенная (distributed) или локалистская (localist ) (\cite{Hinton 1986}, \cite{COTTRELL 1989}, \cite{Azzini}). 
+Использование нейронных сетей (NN)  для WSD было предложено в 80-е гг. в работах \cite{COTTRELL 1983,WALTZ 1985}. В типичной NN на вход   подается   слово, значение которого требуется установить, т.е. целевое (\textit{target}) слово, а также --- контекст (фраза) его содержащий. Узлы выхода соответствуют различным значениям слова. В процессе обучения, когда значение тренировочного целевого слова известно, веса связующих узлы соединений (связей), настраиваются таким образом, чтобы по окончании обучения выходной узел, соответствующий истинному значению целевого слова, имел наибольшую активность. Веса соединений могут быть  положительными или отрицательными, и настраиваются посредством рекуррентных алгоритмов (алгоритм обратного распространения ошибки,  рекуррентный метод наименьших квадратов и т.д.). Сеть может содержать скрытые (hidden) слои, состоящие из узлов, соединенных как прямыми, так и обратными связями. Для представления входной информации обычно используется одна из двух схем:  распределенная (distributed) или локалистская (localist ) (\cite{Hinton 1986}, \cite{COTTRELL 1989}, \cite{Azzini}). 
 
-В работе \cite{VERONIS 1990} описан метод автоматического построения \textbf{\textit{очень больших нейронных сетей}} (VLNN) с помощью текстов, извлекаемых из машиночитаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности. Поясним основную идею VLNN.  Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой \textit{степени пересечения}, т.е.  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, то есть от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит  в  основе  топологии VLNN. В работе \cite{VERONIS 1990}  для построения  VLNN использован  словарь  Collins  English  Dictionary.
+В работе \cite{VERONIS 1990} описан метод автоматического построения \textbf{\textit{очень больших нейронных сетей}} (VLNN) с помощью текстов, извлекаемых из машиночитаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности. Поясним основную идею VLNN.  Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой \textit{степени пересечения}, т.е.  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, то есть от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит  в  основе  топологии VgN. В работе \cite{VERONIS 1990}  для построения  VLNN использован  словарь  Collins  English  Dictionary.
 
 \textbf{Топология сети.} Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные значения слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей толкованию данного значения. Процесс соединения повторяется многократно, создавая сверхбольшую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10–20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные значения данного слова, соединены запрещающими (inhibitory) связями.  
 
@@ -209,25 +209,32 @@ AdaBoost является адаптивным алгоритмом \cite{Freund
 
 На вход алгоритма поступает обучающая выборка $(x_i;y_i);..;(x_m;y_m)$, где каждый элемент $x_i$ принадлежит некоторому домену или признаковому пространству $X$, и каждая метка $y_i$ принадлежит некоторому набору меток $Y$. Для каждого обучающего примера $i$ вес распределения для целых $t$ обозначается $D_t$ $(i)$, где $t$ --- это шаг алгоритма. За начальное распределение весов принимается $D_1$ $(i)= 1/m$. Пусть метки принимают значения из множества  $Y=\{-1,1\}$. 
 
-Далее на каждом шаге $t$, где $t = 1 \ldots T$, выполняется обучение слабого обучаемого с использованием текущего распределения $D_t$, после чего строится слабая гипотеза $h_t: X \to \{-1; 1\}$ с ошибкой первого рода $\epsilon_t=\Sigma_{(i:h_t (x_i)\ne y_i)}D_t(i)$, по которой выбирается уровень значимости $\alpha_t=\frac{1}{2}ln(\frac{1-\epsilon_t}{\epsilon_t})$ и строится новое распределение для следующего шага
-\bfullwidth
-\begin{equation*}
+Далее на каждом шаге $t$, где $t = 1 \ldots T$, выполняется обучение слабого обучаемого с использованием текущего распределения $D_t$, после чего строится слабая гипотеза $h_t: X \to \{-1; 1\}$ с ошибкой первого рода $\epsilon_t=\Sigma_{\displaystyle (i:h_t (x_i)\ne y_i)}D_t(i)$, по которой выбирается уровень значимости $\alpha_t=\frac{1}{2}ln(\frac{\displaystyle 1-\epsilon_t}{\displaystyle \epsilon_t})$ и строится новое распределение для следующего шага
+%\bfullwidth
+%\begin{equation*}
+$$
 D_{t+1}(i)=\frac{D_{t^i}}{Z_t} \times 
 \begin{cases}
 e^{-\alpha t}\text{, если }h_t (x_i) = y_i \\
 e^{\alpha t}\text{, если }h_t (x_i)\ne y_i
 \end{cases}
-= \frac{D_t (i)exp(-\alpha_t y_i h_t (x_i))}{Z_t} 
-\end{equation*}
-\efullwidth
+=
+$$
+$$
+= \frac{D_t (i)exp(-\alpha_t y_i h_t (x_i))}{Z_t}. 
+$$
+%\end{equation*}
+%\efullwidth
 
 Конечная гипотеза $H(x)$ ---  это среднее из большинства решений $T$ слабых гипотез, где $\alpha_t$ --- вес, присвоенный гипотезе $h_t$.
 
-\bfullwidth
-\begin{equation*}
+%\bfullwidth
+%\begin{equation*}
+$$
 H(x)=sign(\sum_{t=1}^T\alpha_t h_t(x))
-\end{equation*}
-\efullwidth
+$$
+%\end{equation*}
+%\efullwidth
 
 Идея алгоритма заключается в выборе набора весов для обучающей выборки. Первоначально все веса примеров устанавливаются одинаково, но на каждом круге цикла веса неправильно классифицированных по гипотезе $h_t$ примеров увеличиваются, таким образом, получают веса, которые относятся к сложным примерам.
 
@@ -237,7 +244,7 @@ H(x)=sign(\sum_{t=1}^T\alpha_t h_t(x))
 
 Так как ошибка обучения и ошибка обобщения ограничены, как показано в статье \cite{Freund 1999}, этот алгоритм действительно является бустинговым алгоритмом в том смысле, что он может эффективно преобразовать слабый алгоритм обучения в сильный, который может породить гипотезу со сколь угодно малой частотой ошибок, имея достаточное количество данных.
 
-После того, как авторы рассмотрели бинарный случай, где целью является различие лишь между двумя возможными классами, они переходят к рассмотрению мультиклассного, более приближенного к реальности. Есть несколько способов приведения AdaBoost к мультиклассному случаю. Самое простое обобщение называется AdaBoost.M1\cite{Freund 1997}, которое является приемлемым, если слабый обучаемый может достичь достаточно высокой точности на распределениях, созданных AdaBoost. Тем не менее, этот метод завершается неудачно, если слабый ученик не может достичь хотя бы 50\% точности при работе на этих  распределениях. Для такого случая было разработано несколько методов:
+После того, как авторы рассмотрели бинарный случай, где целью является различие лишь между двумя возможными классами, они переходят к рассмотрению мультиклассного, более приближенного к реальности. Есть несколько способов приведения AdaBoost к мультиклассному случаю. Самое простое обобщение называется AdaBoost.M1 \cite{Freund 1997}, которое является приемлемым, если слабый обучаемый может достичь достаточно высокой точности на распределениях, созданных AdaBoost. Тем не менее, этот метод завершается неудачно, если слабый ученик не может достичь хотя бы 50\% точности при работе на этих  распределениях. Для такого случая было разработано несколько методов:
 
 \begin{enumerate}
 \item Методы, которые работают за счет преобразования мультиклассной задачи в большую бинарную задачу или в набор бинарных задач. Однако, эти методы требуют дополнительных усилий в разработке слабого алгоритма обучения.
@@ -310,6 +317,8 @@ product & продуктовая линия & The products or services sold by a
 
 Эксперименты проводились с разными размерами обучающей выборки для того, чтобы выяснить, какого рода зависимость имеет место между точностью определения значения и размером выборки. На Рис.~\ref{kor1} отображена зависимость точности работы алгоритмов от размера выборки. При увеличении размера обучающей выборки сначала происходит резкий рост точности, последующий прирост точности становится незначительным.
 
+Эксперименты учитывали не только точность определения значения, но и требовательность алгоритма к ресурсам в процессе обучения и работы. На Рис.~\ref{kor2} можно увидеть зависимость времени обучения от размера выборки. Самыми быстрообучаемыми оказались байесовский классификатор и перцептрон, а самыми медленными --- нормальные формы (Рис.~\ref{kor2}).
+
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
  width=0.9\columnwidth]{line_wsd_1_accuracy.png}
@@ -317,7 +326,7 @@ product & продуктовая линия & The products or services sold by a
 \label{kor1}
 \end{figure}
 
-Эксперименты учитывали не только точность определения значения, но и требовательность алгоритма к ресурсам в процессе обучения и работы. На Рис.~\ref{kor2} можно увидеть зависимость времени обучения от размера выборки. Самыми быстрообучаемыми оказались байесовский классификатор и перцептрон, а самыми медленными --- нормальные формы (Рис.~\ref{kor2}).
+%Эксперименты учитывали не только точность определения значения, но и требовательность алгоритма к ресурсам в процессе обучения и работы. На %Рис.~\ref{kor2} можно увидеть зависимость времени обучения от размера выборки. Самыми быстрообучаемыми оказались байесовский классификатор и %перцептрон, а самыми медленными --- нормальные формы (Рис.~\ref{kor2}).
 
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
@@ -443,7 +452,7 @@ product & продуктовая линия & The products or services sold by a
 
 Задача поиска похожих слов \textit{(similar words)} является первым шагом в определении значения слова. Тогда при обработке корпуса, включающего предложение (1), результатом должно быть определение близости значения слова \textit{Tezg\"uino} к словам \textit{пиво, вино, водка.}
 
-\textbf{Методология автоматического создания тезауруса.} Для вычисления сходства между словами в работе \cite{Dekang 1998} использован парсер \cite{Dekang 1993}, извлекающий тройки из текста. Тройки зависимостей (от англ. \textit{dependency triple}, далее просто \\textit{тройки}) состоят из двух слов и грамматического отношения между ними. Символ $||w, r, w'||$ означает частоту в корпусе тройки $(w, r, w')$, где $w, w'$ --- это слова в нормальной форме, $r$ --- синтаксическое отношение. Произвольное слово или отношение обозначается символом-джокером «*». Например, ||\textit{cook, obj,} *|| означает число троек со словом \textit{cook} и отношением \textit{obj}. 
+\textbf{Методология автоматического создания тезауруса.} Для вычисления сходства между словами в работе \cite{Dekang 1998} использован парсер \cite{Dekang 1993}, извлекающий тройки из текста. Тройки зависимостей (от англ. \textit{dependency triple}, далее просто \textit{тройки}) состоят из двух слов и грамматического отношения между ними. Символ $||w, r, w'||$ означает частоту в корпусе тройки $(w, r, w')$, где $w, w'$ --- это слова в нормальной форме, $r$ --- синтаксическое отношение. Произвольное слово или отношение обозначается символом-джокером «*». Например, ||\textit{cook, obj,} *|| означает число троек со словом \textit{cook} и отношением \textit{obj}. 
 
 Например из предложения \textit{<<У меня есть коричневая собака>>} будут извлечены следующие тройки:
 
@@ -481,33 +490,49 @@ product & продуктовая линия & The products or services sold by a
 \begin{enumerate}
 \item Когда значение ||\textit{w, r, w'}|| неизвестно, то предполагаем, что \textbf{А} и \textbf{С} являются условно независимыми при наличии события \textbf{В}.  Вероятность наступления сразу трех этих событий составляет \textbf{$P_{MLE}(B) P_{MLE} (A|B) P_{MLE} (C|B)$}, где \textbf{$P_{MLE}$} --- это оценка максимального правдоподобия распределения вероятностей (\textit{maximum likelihood estimation})
 
-$P_{MLE}(B)=\frac{||*,r,*||}{||*,*,*||}$\\
-$P_{MLE}(A|B)=\frac{||w,r,*||}{||*,r,*||}$\\
-$P_{MLE}(C|B)=\frac{||*,r,w'||}{||*,r,*||}$
+$P_{MLE}(B)=\frac{\displaystyle ||*,r,*||}{\displaystyle ||*,*,*||}$\\
+$P_{MLE}(A|B)=\frac{\displaystyle ||w,r,*||}{\displaystyle ||*,r,*||}$\\
+$P_{MLE}(C|B)=\frac{\displaystyle ||*,r,w'||}{\displaystyle ||*,r,*||}$
 
 \item Когда значение ||\textit{w, r, w’}|| известно, можно сразу получить $P_{MLE}(A,B,C)$:
 
-$P_{MLE}(A,B,C)=\frac{||w,r,w'||}{||*,*,*||}$
+$P_{MLE}(A,B,C)=\frac{\displaystyle ||w,r,w'||}{\displaystyle ||*,*,*||}$
 \item Пусть \textit{\textbf{I(w,r, w’)}} обозначает количество информации, содержащейся 
 в утверждении ||\textit{w, r, w'}||\textit{=с}. Можно вычислить это значение так:
-
 \end{enumerate}
 
-\bfullwidth
-\begin{center}
-$I(w,r,w’)=-log(P_{MLE}(B) P_{MLE} (A|B) P_{MLE} (C|B))-(-log(P_{MLE}(A,B,C))=log\frac{||w,r,w'||\times||*,r,*||}{||w,r,*||\times||*,r,w'||}$
-\end{center}
-\efullwidth
+%\bfullwidth
+%\begin{center}
+$$
+I(w,r,w’)=
+$$
+$$
+=-log(P_{MLE}(B) P_{MLE} (A|B) P_{MLE} (C|B))-
+$$
+$$
+-(-log(P_{MLE}(A,B,C))=
+$$
+$$
+=log\frac{||w,r,w'||\times||*,r,*||}{||w,r,*||\times||*,r,w'||}.
+$$
+
+%$\end{center}
+%$\efullwidth
 
 Отметим, что значение \textit{I(w,r,w’)} равно количеству взаимной информации (\textit{mutual information}) между $w$ и $w'$ \cite{Donald 1990}.
 
-Пусть $T(w)$ --– это множество пар \textit{(r, w')}, при которых $log\frac{||w,r,w'||\times||*,r,*||}{||w,r,*||\times||*,r,w'||}$ имеет положительное значение. Определим значение сходства (похожести) двух слов \textit{w1} и \textit{w2} с помощью формулы:
+Пусть $T(w)$ --– это множество пар \textit{(r, w')}, при которых $log\frac{\displaystyle ||w,r,w'||\times||*,r,*||}{\displaystyle ||w,r,*||\times||*,r,w'||}$ имеет положительное значение. Определим значение сходства (похожести) двух слов \textit{w1} и \textit{w2} с помощью формулы:
 
-\bfullwidth
-\begin{center}
-$sim(w_1,w_2)=\frac{\sum_{(r,w)\in T(w_1)\cap T(w_2)}(I(w_1,r,w)+I(w_2,r,w))}{\sum_{(r,w)\in T(w_1)}I(w_1,r,w)+\sum_{(r,w)\in T(w_2)}I(w_2,r,w)}$
-\end{center}
-\efullwidth
+%\bfullwidth
+%\begin{center}
+$$
+sim(w_1,w_2)=
+$$
+$$
+\frac{\displaystyle \sum_{(r,w)\in T(w_1)\cap T(w_2)}(I(w_1,r,w)+I(w_2,r,w))}{\displaystyle \sum_{(r,w)\in T(w_1)}I(w_1,r,w)+\sum_{(r,w)\in T(w_2)}I(w_2,r,w)}.
+$$
+%\end{center}
+%\efullwidth
 
 \textbf{Практическая реализация метода.} Был обработан корпус, включающий 64 млн. слов. Из него было извлечено 56,6 миллионов троек, включающих 8,7 миллиона уникальных троек.
 
@@ -632,7 +657,12 @@ CBC состоит из трех этапов.
 
 На этапе I для каждого элемента (слова) вычисляются $k$ наиболее похожих слов. Сначала весь список относящихся к слову значений сортируется по убыванию значений связи согласно формуле точечной взаимной информации (pointwise mutual information (PMI) \cite{Manning 1999}), а затем, с помощью иерархического кластерного анализа по \textit{методу средней связи} \cite{Kim 1989}, вычисляется сходство между всеми элементами кластера попарно. Значение функции PMI \cite{Manning 1999} между предполагаемым значением слова (контекстом) и элементом (словом) вычисляется следующим образом: пусть x --- это рассматриваемый элемент, а y --- контекст. \textit{Точечная взаимная информация} между x и y определена как:
 
-$pmi(x;y)\equiv log \frac{p(x,y)}{p(x)p(y)}=log\frac{p(x|y)}{p(x)}=log\frac{p(y|x)}{p(y)}$
+$$
+pmi(x;y)\equiv log \frac{\displaystyle p(x,y)}{\displaystyle p(x)p(y)}=
+$$
+$$
+=log\frac{\displaystyle p(x|y)}{\displaystyle p(x)}=log\frac{\displaystyle p(y|x)}{\displaystyle p(y)}.
+$$
 \parindent=0,5cm
 
 При кластеризации посредством метода средних связей \textit{(average-link clustering)} вычисляется среднее сходство между данным объектом и всеми объектами в кластере, а затем, если найденное \textit{среднее значение сходства} достигает или превосходит некоторый заданный пороговый уровень сходства, объект присоединяется к этому кластеру \cite{Kim 1989}. Сложность этого алгоритма $O(n^2 * log (n))$, где $n$ --- число кластеризуемых элементов \cite{Jain 1999}.
@@ -702,7 +732,7 @@ $R = \emptyset$ // $R$ --- это множество остатков, то ес
 Согласно дистрибутивной гипотезе (Distributional Hypothesis) \cite{Harris 1985} слова, употребляемые в сходных контекстах, близки по смыслу. Алгоритм \textit{Кластеризации посредством комитетов} \cite{Pantel 2002} разрешает лексическую многозначность, группируя слова согласно сходству их контекстов. Каждому полученному кластеру соответствует одно из значений слова.
 \parindent=0,5cm
 
-В Табл.~\ref{yank} каждая запись показывает кластеры, которым принадлежит заглавное слово. Имена для кластеров Nq34, Nq137, $\ldots$ генерируются автоматически. После каждого имени кластера находится число, обозначающее сходство между кластером и заглавным словом (т.е. рукав, сердце и одежда). Далее перечисляются четыре слова, наиболее близкие центроиду кластера. Каждый кластер соответствует одному значению заглавного слова. Например, Nq34 соответствует значению <<деталь одежды>>, а Nq137 соответствует значению <<ответвление русла реки>>.
+%В Табл.~\ref{yank} каждая запись показывает кластеры, которым принадлежит заглавное слово. Имена для кластеров Nq34, Nq137, $\ldots$ генерируются %автоматически. После каждого имени кластера находится число, обозначающее сходство между кластером и заглавным словом (т.е. рукав, сердце и одежда). %Далее перечисляются четыре слова, наиболее близкие центроиду кластера. Каждый кластер соответствует одному значению заглавного слова. Например, Nq34 %соответствует значению <<деталь одежды>>, а Nq137 соответствует значению <<ответвление русла реки>>.
 
 \begin{table}[H]
 \caption{Для построения кластеров использовались данные словарных статей Викисловаря: <<одежда>>,  <<рукав>> и  <<сердце>>}
@@ -727,6 +757,9 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 \end{tabular}
 \label{yank}
 \end{table}
+
+В Табл.~\ref{yank} каждая запись показывает кластеры, которым принадлежит заглавное слово. Имена для кластеров Nq34, Nq137, $\ldots$ генерируются автоматически. После каждого имени кластера находится число, обозначающее сходство между кластером и заглавным словом (т.е. рукав, сердце и одежда). Далее перечисляются четыре слова, наиболее близкие центроиду кластера. Каждый кластер соответствует одному значению заглавного слова. Например, Nq34 соответствует значению <<деталь одежды>>, а Nq137 соответствует значению <<ответвление русла реки>>.
+
 
 \textbf{Сравнение с алгоритмом UNICON.} CBC является разновидностью алгоритма UNICON \cite{Lin 2001}, который также строит центроид кластера, используя небольшой набор похожих элементов.
 \parindent=0,5cm
@@ -794,39 +827,49 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 
 Следующее слово \textit{machine} имеет 5 значений: от $machine_1$  до $machine_2$. В первом значении $machine_1$  [лексема "machine", значение \{an efficient person\}] слово связано со значениями слов $person$ и $Mr.$, поэтому слово $machine$  вставляется в первую компоненту. После этой вставки изображение первой компоненты становится таким, как показано на Рис.~\ref{step2}. Если продолжить этот процесс и вставить слова \textit{micro-computer, device} и \textit{pump,} то количество альтернативных вариантов значительно увеличивается. Самые сильные интерпретации представлены на Рис.~\ref{step6}. При условии, что текст связный, лучшей интерпретацией считается та, которая имеет больше всего связей. В данном  случае в конце шага 3 выбрана другая интерпретация $machine_4$ [лексема "machine", значение \{\textit{any mechanical or electrical device that performs or assists in the performance}\}], что верно отражает значение слова \textit{machine} в этом контексте.
 
-Оценка интерпретации определяется как сумма оценок ее цепочек. 
-Оценка цепочки определяется количеством и весом отношений между участниками цепочки. 
-В эксперименте авторы зафиксировали следующий вес: повторения и синонимы  --- 10, антонимы --- 7, 
-гиперонимы и гипонимы --- 4. Описанный алгоритм вычисляет все возможные интерпретации, 
-не допуская противоречий между ними. 
-Когда число возможных интерпретаций превышает определенный порог, слабые интерпретации удаляются, 
-это необходимо для предотвращения экспоненциального роста использования памяти.
+%Оценка интерпретации определяется как сумма оценок ее цепочек. 
+%Оценка цепочки определяется количеством и весом отношений между участниками цепочки. 
+%В эксперименте авторы зафиксировали следующий вес: повторения и синонимы  --- 10, антонимы --- 7, 
+%гиперонимы и гипонимы --- 4. Описанный алгоритм вычисляет все возможные интерпретации, 
+%не допуская противоречий между ними. 
+%Когда число возможных интерпретаций превышает определенный порог, слабые интерпретации удаляются, 
+%это необходимо для предотвращения экспоненциального роста использования памяти.
 
 \bfullwidth
 \begin{figure}
         \centering
-        \begin{subfigure}[b]{0.24\textwidth}
+        \begin{subfigure}[b]{0.33\textwidth}
                 \fbox{\includegraphics[width=\textwidth]{step_2_int_1.PNG}}
 %                \includegraphics[width=\textwidth]{step_2_int_1.PNG}
 %                \caption{Шаг 2, интерпретация 1}
                 \caption{Интерпретация 1}
         \end{subfigure}%
-        \hfill%%% horizontal distance between two images (side by side)
-        \begin{subfigure}[b]{0.24\textwidth}
+%        \hfill%%% horizontal distance between two images (side by side)
+        \quad% add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+             % (or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.39\textwidth}
                 \fbox{\includegraphics[width=\textwidth]{step_2_int_2.PNG}}
 %                \caption{Шаг 2, интерпретация 2}
                 \caption{Интерпретация 2}
         \end{subfigure}
-        ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+\end{figure}
+\efullwidth
+
+\bfullwidth
+\begin{figure}
+        \centering
+        %~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
           %(or a blank line to force the subfigure onto a new line)
-        \begin{subfigure}[b]{0.24\textwidth}
+        \begin{subfigure}[b]{0.39\textwidth}
                 \fbox{\includegraphics[width=\textwidth]{step_2_int_3.PNG}}
 %                \includegraphics[width=\textwidth]{step_2_int_3.PNG}
 %                \caption{Шаг 2, интерпретация 3}
                 \caption{Интерпретация 3}
         \end{subfigure}
-        \hfill%%% horizontal distance between two images (side by side)
-        \begin{subfigure}[b]{0.2\textwidth}
+%        \hfill%%% horizontal distance between two images (side by side)
+        \quad% add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+             % (or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.33\textwidth}
                 \fbox{\includegraphics[width=\textwidth]{step_2_int_4.PNG}}
 %                \includegraphics[width=\textwidth]{step_2_int_4.PNG}
 %                \caption{Шаг 2, интерпретация 4}
@@ -834,7 +877,9 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
         \end{subfigure}
         \caption{Четыре интерпретации на втором шаге}\label{step2}
 \end{figure}
+\efullwidth
 
+\bfullwidth
 \begin{figure}
         \centering
         \begin{subfigure}[b]{0.42\textwidth}
@@ -852,8 +897,16 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
         \end{subfigure}
         \caption{Две самые сильные интерпретации, полученные на третьем шаге}\label{step6}
 \end{figure}
-
 \efullwidth
+
+Оценка интерпретации определяется как сумма оценок ее цепочек. 
+Оценка цепочки определяется количеством и весом отношений между участниками цепочки. 
+В эксперименте авторы зафиксировали следующий вес: повторения и синонимы  --- 10, антонимы --- 7, 
+гиперонимы и гипонимы --- 4. Описанный алгоритм вычисляет все возможные интерпретации, 
+не допуская противоречий между ними. 
+Когда число возможных интерпретаций превышает определенный порог, слабые интерпретации удаляются, 
+это необходимо для предотвращения экспоненциального роста использования памяти.
+
 
 \textbf{Объединение цепочек из разных сегментов.} Текст предварительно разбивается на сегменты (несколько предложений или абзац). Пример выше (\textit{Mr. Kenny...}) соответствует одному сегменту. Цепочки строятся для каждого сегмента на основе найденных отношений между словами (extra-strong, strong, medium-strong). На следующем этапе объединяются цепочки из разных сегментов, но для объединения нужно, чтобы выполнялось еще более жесткое условие: две цепочки объединяются, если они содержат одно и то же слово в одном и том же значении. Поскольку есть прямая связь между цепочками и смысловыми блоками текста, постольку с помощью лексических цепочек можно решать и обратную задачу --- разбиение текста на сегменты \cite{Barzilay Elhadad 1997}.
 
@@ -922,7 +975,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 Например, построим SP для глагола \textit{ползать} и сеть на Рис.~\ref{ris1} будет базой знаний.
 \begin{figure}[H]
     \includegraphics[keepaspectratio=true,width=0.9\columnwidth]{bayesian_network_crocodile.jpg}
-    \caption{байесовская сеть для многозначного существительного \textit{крокодил}}
+    \caption{Байесовская сеть для многозначного существительного \textit{крокодил}}
     \label{ris1}
 \end{figure}
 \parindent=0,5cm
@@ -1437,5 +1490,21 @@ Petrozavodsk State University\\
 tel.: (8142) 711078\\
 e-mail: dyankevic@gmail.com
 \end{aboutauthors}
+
+
+  \begin{table}[H]
+\centering
+\caption{ aaaaa $a_1(m)/m$ kkkkk $m$ }
+\renewcommand{\arraystretch}{1.8}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+$m$&1&2&3&4&5&6&7&8&9&10\\
+\hline
+\!\!\!$\frac{a_1(m)}{m}$\!\!&\!1&\!1&\!3&\!5&\!7&\!23&\!49&\!52&\!76&\!99\\
+\hline
+\end{tabular}
+\end{table}
+
+
 
 \end{document}
